@@ -1,3 +1,7 @@
+* Mon Jun 14 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.1.0
+- Removed support for Puppet 5
+- Ensured support for Puppet 7 in requirements and stdlib
+
 * Tue Mar 10 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.0-0
 - Added support for EL8
 - Dropped support for EL6
